--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <img
-src = https://s3.amazonaws.com/ironboard-learn/lion.jpg
+src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
 
   <!-- Your code here -->
