--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@ src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion img ">
 <img
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion img " >
+
 <img
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
-atl="A yawning lion" title ="Let s learn more about Lions">
+atl="A yawning lion"
+title ="Let s learn more about Lions">
 
 
 
