--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion i
 <img
 src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
  atl="A yawning lion"
-  title="Let s learn more about Lions">
+  title="Let s learn more about Lions!">
 
 
 
