Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion i
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion img ">
 
 <img
-src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
- atl="A yawning lion"
-  title="Let s learn more about Lions!">
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" atl="A yawning lion" title="Let s learn more about Lions!">
 
 
 
