Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <img
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-<img
-src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion img ">
-<img
-src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion img ">
+<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion img ">
 
-<img
-src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" atl="A yawning lion" title="Let s learn more about Lions!">
+<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion img ">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+atl="A yawning lion img" 
+title="Let s learn more about Lions!">
 
 
 
