--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <img
 src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion img ">
+<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "a yawning lion ">
 
-<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion img ">
+<img src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt = "A yawning lion  ">
 
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
-atl="A yawning lion img" 
+atl="A yawning lion " 
 title="Let s learn more about Lions!">
 
 
