--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ src ="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
 atl="A yawning lion " 
-title="Let s learn more about Lions!">
+title="We're here to help you!">
 
 
 
